fixed visibility issues, added modals and started with yelp api, currently returning error

--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,10 @@ span {
 
 
 .map {
-	height: 500px;
+	height: 800px;
 	padding: 20px;
 	margin-bottom: 100px;
+	margin-top: 150px;
 }
 
 .disabled {
